SBVTestSuite/TestSuite/CompileTests/PCase/PCase34.stderr
PCase34.hs:15:14: error: [GHC-39584]
    " PCase34.hs:18:9: pCase: Wildcard patterns are not allowed in proof case-splits.
    " In the quasi-quotation:
        [pCase|Expr e of
        Zero  -> undefined
        Num _ -> undefined
        _     -> undefined
        _     -> undefined
      |]
   |
15 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

